kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: shop.34.107.103.100.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 8080
